--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 
 spring.datasource.driver=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_security_custom_user_demo?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
-spring.datasource.username=datauser
+spring.datasource.url=jdbc:mysql://localhost:3306/sys?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
+spring.datasource.username=root
 spring.datasource.password=datauser
 
 spring.jpa.hibernate.ddl-auto = update
