--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.driver=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sys?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
 spring.datasource.username=root
 spring.datasource.password=datauser
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=3000
+
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
