--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 
 spring.datasource.driver=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sys?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/sys?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
+#spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_security_demo_plaintext?useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Moscow
+spring.datasource.username=datauser
 spring.datasource.password=datauser
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=3000
@@ -12,3 +14,6 @@ spring.datasource.hikari.minimum-idle=3000
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql = false
+
+users.rest.url = http://localhost:8081/api/users
+task.rest.url  = http://localhost:8081/api/task
