prevent credential erasing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.main.allow-circular-references=true
 
 users.rest.url = http://localhost:8081/api/users
 task.rest.url  = http://localhost:8081/api/task
+
+spring.security.au
